cabal-version:      3.12

-- Newer versions complain
name:               criminally-undersubbed
version:            0.2.0.0

-- synopsis:
-- description:
homepage:           https://github.com/danwdart/criminally-undersubbed#readme
license:            AGPL-3.0-only

-- license-file:        LICENSE
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
copyright:          2025 Dan Dart
category:           Web
build-type:         Simple
extra-source-files: README.md

common shared-properties
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:      base ^>=4.22

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-role-annotations
    -Wno-unrecognised-warning-flags

  ghcjs-options:      -dedupe

-- library
--   hs-source-dirs:     lib
--   default-language:   GHC2024
--   default-extensions:
------     UnicodeSyntax
-- 
--   build-depends:
--     , base           ^>=4.22
--     , gogol ^>=0.5
--     , gogol-youtube ^>=0.5
--     , lens                 ^>=5.3.3
-- 
--   ghc-options:
--     -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
--     -Wno-missing-import-lists -Wno-missing-export-lists
--     -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
--     -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
--     -Wno-missing-local-signatures -Wno-all-missed-specialisations
--     -Wno-missed-specialisations -Wno-missing-role-annotations
--     -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
--     -Wno-unrecognised-warning-flags
-- 
--   ghcjs-options:      -dedupe
--   exposed-modules:

-- todo these could be a depended library
executable criminally-undersubbed
  import:         shared-properties
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:
    , base           ^>=4.22
    , gogol          ^>=1
    , gogol-youtube  ^>=1
    , lens           ^>=5.3.3
    , pretty-simple  ^>=4.1.3
    , process        ^>=1.6.25
    , text           ^>=2.1.2

-- , gogol ^>=0.5
-- , gogol-youtube ^>=0.5
--
-- , text        ^>=2.1.2

-- test-suite criminally-undersubbed-test
--   if arch(javascript) || arch(wasm32)
--     buildable: False
--   if !arch(wasm32)
--     ghc-options: -threaded -rtsopts -with-rtsopts=-N 
--   ghc-options:
--     -Wall -Werror -haddock 
--     -Weverything -Wno-unsafe -Wno-safe -Wno-missing-import-lists
--     -Wno-missing-export-lists -Wno-implicit-prelude
--     -Wno-missing-safe-haskell-mode -Wno-missing-kind-signatures
--     -Wno-missing-poly-kind-signatures -Wno-missing-local-signatures
--     -Wno-all-missed-specialisations -Wno-missed-specialisations
--     -Wno-missing-role-annotations -Wno-unrecognised-warning-flags
-- 
--   ghcjs-options:      -dedupe
--   hs-source-dirs:     test
--   type:               exitcode-stdio-1.0
--   main-is:            Spec.hs
--   other-modules:
-- 
--   -- build-tool-depends:
--   --  hspec-discover:hspec-discover
--   default-language:   GHC2024
--   default-extensions:
------     UnicodeSyntax
-- 
--   build-depends:      hspec ^>=2.11.15

--   base ^>=4.22
-- , criminally-undersubbed ^>=0.2
-- , hspec-core ^>=2.11.15
-- , hspec-expectations ^>=0.8.4
-- , QuickCheck ^>=2.17
